[package]
name = "ringest"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
async-trait = "0.1.85"
tempfile = "3.19.1"
arboard = "3.4.1"
